# aws-recipe-book

./: .gitignore  README.md  cdk.json  deployment_notes.sh  pyproject.toml
.github/actions/format-action/: action.yml
.github/actions/unit-test-action/: action.yml
.github/prerrequisites/: README.md  github-actions-oidc-federation-and-role.yml
.github/workflows/: cdk-checkov.yml  cdk-deploy.yml  cdk-synth-diff.yml  deploy.yml  format.yml  unit-tests.yml
.github/workflows/nested/: cdk-checkov.yml
assets/: Challenge_TechnicalDetails.excalidraw  aws-santi-architecture-cicd.drawio  aws-santi-architecture-main.drawio  aws-santi-architecture-original.drawio  aws-santi-architecture.drawio
backend/access_patterns/: recipes.py
backend/api/v1/: main.py
backend/api/v1/routers/: recipes.py
backend/api/v1/schemas/: schema-recipes.json  schema.py
backend/api/v1/services/: validator.py
backend/common/: enums.py  logger.py
backend/helpers/: dynamodb_helper.py
backend/models/: recipes.py
cdk/: app.py
cdk/stacks/: cdk_backend_stack.py  cdk_chatbot_stack.py  cdk_frontend_stack.py
chatbot/bedrock_agent/: fetch_recipes.py  lambda_function.py
chatbot/state_machine/processing/: bedrock_agent.py  process_text.py
docs/: AWS_CONFIGURATION.md  WHATSAPP_CONFIGURATION.md
frontend/: .gitignore  index.html
frontend/src/: GLOBAL_VARS.jsx
frontend/src/components/: Dashboard.jsx  Home.jsx  Login.jsx  Page2.jsx  RegisterDeprecated.jsx
lambda-layers/common/: requirements.txt
tests/unit/cdk/: test_cdk_chatbot_stack.py
(+1 files in other folders)
